--- a/nx.json
+++ b/nx.json
@@ -21,5 +21,25 @@
       }
     }
   },
-  "projects": {}
+  "projects": {
+    "demo": {
+      "tags": []
+    },
+    "demo-e2e": {
+      "tags": [],
+      "implicitDependencies": ["demo"]
+    },
+    "config": {
+      "tags": []
+    },
+    "home": {
+      "tags": []
+    },
+    "customers": {
+      "tags": []
+    },
+    "widgets": {
+      "tags": []
+    }
+  }
 }
