--- a/angular.json
+++ b/angular.json
@@ -21,7 +21,10 @@
             "polyfills": "apps/demo/src/polyfills.ts",
             "tsConfig": "apps/demo/tsconfig.app.json",
             "aot": true,
-            "assets": ["apps/demo/src/favicon.ico", "apps/demo/src/assets"],
+            "assets": [
+              "apps/demo/src/favicon.ico",
+              "apps/demo/src/assets"
+            ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "apps/demo/src/styles.scss"
@@ -30,25 +33,32 @@
           },
           "configurations": {
             "production": {
-              "fileReplacements": [{
-                "replace": "apps/demo/src/environments/environment.ts",
-                "with": "apps/demo/src/environments/environment.prod.ts"
-              }],
-              "assets": ["apps/demo/src/favicon.ico", {
-                "glob": "**/*",
-                "input": "apps/demo/src/assets/",
-                "ignore": ["config/**"],
-                "output": "/assets/"
-              }],
+              "fileReplacements": [
+                {
+                  "replace": "apps/demo/src/environments/environment.ts",
+                  "with": "apps/demo/src/environments/environment.prod.ts"
+                }
+              ],
+              "assets": [
+                "apps/demo/src/favicon.ico",
+                {
+                  "glob": "**/*",
+                  "input": "apps/demo/src/assets/",
+                  "ignore": [
+                    "config/**"
+                  ],
+                  "output": "/assets/"
+                }
+              ],
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
-              "extractCss": true,
               "namedChunks": false,
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true,
-              "budgets": [{
+              "budgets": [
+                {
                   "type": "initial",
                   "maximumWarning": "2mb",
                   "maximumError": "5mb"
@@ -60,7 +70,10 @@
                 }
               ]
             }
-          }
+          },
+          "outputs": [
+            "{options.outputPath}"
+          ]
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
@@ -86,17 +99,21 @@
               "apps/demo/tsconfig.app.json",
               "apps/demo/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!apps/demo/**/*"]
+            "exclude": [
+              "**/node_modules/**",
+              "!apps/demo/**/*"
+            ]
           }
         },
         "test": {
           "builder": "@nrwl/jest:jest",
           "options": {
             "jestConfig": "apps/demo/jest.config.js",
-            "tsConfig": "apps/demo/tsconfig.spec.json",
-            "passWithNoTests": true,
-            "setupFile": "apps/demo/src/test-setup.ts"
-          }
+            "passWithNoTests": true
+          },
+          "outputs": [
+            "coverage/apps/demo"
+          ]
         }
       }
     },
@@ -121,8 +138,13 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": ["apps/demo-e2e/tsconfig.e2e.json"],
-            "exclude": ["**/node_modules/**", "!apps/demo-e2e/**/*"]
+            "tsConfig": [
+              "apps/demo-e2e/tsconfig.e2e.json"
+            ],
+            "exclude": [
+              "**/node_modules/**",
+              "!apps/demo-e2e/**/*"
+            ]
           }
         }
       }
@@ -140,17 +162,21 @@
               "libs/config/tsconfig.lib.json",
               "libs/config/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!libs/config/**/*"]
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/config/**/*"
+            ]
           }
         },
         "test": {
           "builder": "@nrwl/jest:jest",
           "options": {
             "jestConfig": "libs/config/jest.config.js",
-            "tsConfig": "libs/config/tsconfig.spec.json",
-            "passWithNoTests": true,
-            "setupFile": "libs/config/src/test-setup.ts"
-          }
+            "passWithNoTests": true
+          },
+          "outputs": [
+            "coverage/libs/config"
+          ]
         }
       },
       "schematics": {
@@ -172,17 +198,21 @@
               "libs/home/tsconfig.lib.json",
               "libs/home/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!libs/home/**/*"]
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/home/**/*"
+            ]
           }
         },
         "test": {
           "builder": "@nrwl/jest:jest",
           "options": {
             "jestConfig": "libs/home/jest.config.js",
-            "tsConfig": "libs/home/tsconfig.spec.json",
-            "passWithNoTests": true,
-            "setupFile": "libs/home/src/test-setup.ts"
-          }
+            "passWithNoTests": true
+          },
+          "outputs": [
+            "coverage/libs/home"
+          ]
         }
       },
       "schematics": {
@@ -204,17 +234,21 @@
               "libs/customers/tsconfig.lib.json",
               "libs/customers/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!libs/customers/**/*"]
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/customers/**/*"
+            ]
           }
         },
         "test": {
           "builder": "@nrwl/jest:jest",
           "options": {
             "jestConfig": "libs/customers/jest.config.js",
-            "tsConfig": "libs/customers/tsconfig.spec.json",
-            "passWithNoTests": true,
-            "setupFile": "libs/customers/src/test-setup.ts"
-          }
+            "passWithNoTests": true
+          },
+          "outputs": [
+            "coverage/libs/customers"
+          ]
         }
       },
       "schematics": {
@@ -236,17 +270,21 @@
               "libs/widgets/tsconfig.lib.json",
               "libs/widgets/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!libs/widgets/**/*"]
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/widgets/**/*"
+            ]
           }
         },
         "test": {
           "builder": "@nrwl/jest:jest",
           "options": {
             "jestConfig": "libs/widgets/jest.config.js",
-            "tsConfig": "libs/widgets/tsconfig.spec.json",
-            "passWithNoTests": true,
-            "setupFile": "libs/widgets/src/test-setup.ts"
-          }
+            "passWithNoTests": true
+          },
+          "outputs": [
+            "coverage/libs/widgets"
+          ]
         }
       },
       "schematics": {
